import("//adrbrowsiel/browser/translate/buildflags/buildflags.gni")
import("//adrbrowsiel/build/config.gni")
import("//adrbrowsiel/components/binance/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_ads/browser/buildflags/buildflags.gni")
import(
    "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_referrals/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_rewards/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_sync/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_wallet/common/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_wayback_machine/buildflags/buildflags.gni")
import("//adrbrowsiel/components/adrbrowsiel_webtorrent/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/crypto_dot_com/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/decentralized_dns/buildflags/buildflags.gni")
import("//adrbrowsiel/components/gemini/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/gemini/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/greaselion/browser/buildflags/buildflags.gni")
import("//adrbrowsiel/components/ipfs/buildflags/buildflags.gni")
import("//adrbrowsiel/components/speedreader/buildflags.gni")
import("//adrbrowsiel/components/tor/buildflags/buildflags.gni")
import("//adrbrowsiel/test/testing.gni")
import("//chrome/common/features.gni")
import("//components/gcm_driver/config.gni")
import("//testing/test.gni")

if (is_android) {
  import("//build/config/android/rules.gni")
  import("//chrome/android/chrome_public_apk_tmpl.gni")
}

static_library("adrbrowsiel_test_support_unit") {
  testonly = true

  sources = [
    # Not including adrbrowsiel_testing_profile.{h,cc} here, they need to be pulled
    # via an override for testing_profile.{h,cc} for upstream tests to build.
    "base/adrbrowsiel_unit_test_suite.cc",
    "base/adrbrowsiel_unit_test_suite.h",
    "base/run_all_unittests.cc",
  ]

  public_deps = [
    "//base",
    "//chrome:resources",
    "//chrome:strings",
    "//chrome/browser",
    "//chrome/common",
    "//chrome/test:test_support",
  ]

  deps = [
    "//adrbrowsiel/browser/profiles",
    "//adrbrowsiel/common:pref_names",
    "//components/gcm_driver",
    "//components/gcm_driver:gcm_buildflags",
    "//mojo/core/embedder",
  ]

  if (is_win) {
    deps += [ "//chrome/install_static/test:test_support" ]
  }
}

test("adrbrowsiel_unit_tests") {
  testonly = true

  sources = [
    "../../components/domain_reliability/test_util.cc",
    "../../components/domain_reliability/test_util.h",
    "//adrbrowsiel/browser/adrbrowsiel_content_browser_client_unittest.cc",
    "//adrbrowsiel/browser/adrbrowsiel_resources_util_unittest.cc",
    "//adrbrowsiel/browser/browsing_data/adrbrowsiel_browsing_data_remover_delegate_unittest.cc",
    "//adrbrowsiel/browser/download/adrbrowsiel_download_item_model_unittest.cc",
    "//adrbrowsiel/browser/net/adrbrowsiel_ad_block_tp_network_delegate_helper_unittest.cc",
    "//adrbrowsiel/browser/net/adrbrowsiel_block_safebrowsing_urls_unittest.cc",
    "//adrbrowsiel/browser/net/adrbrowsiel_common_static_redirect_network_delegate_helper_unittest.cc",
    "//adrbrowsiel/browser/net/adrbrowsiel_httpse_network_delegate_helper_unittest.cc",
    "//adrbrowsiel/browser/net/adrbrowsiel_network_delegate_base_unittest.cc",
    "//adrbrowsiel/browser/net/adrbrowsiel_site_hacks_network_delegate_helper_unittest.cc",
    "//adrbrowsiel/browser/net/adrbrowsiel_static_redirect_network_delegate_helper_unittest.cc",
    "//adrbrowsiel/browser/net/adrbrowsiel_system_request_handler_unittest.cc",
    "//adrbrowsiel/browser/profiles/profile_util_unittest.cc",
    "//adrbrowsiel/chromium_src/chrome/browser/history/history_utils_unittest.cc",
    "//adrbrowsiel/chromium_src/chrome/browser/lookalikes/lookalike_url_navigation_throttle_unittest.cc",
    "//adrbrowsiel/chromium_src/chrome/browser/signin/account_consistency_disabled_unittest.cc",
    "//adrbrowsiel/chromium_src/components/autofill/core/browser/autofill_experiments_unittest.cc",
    "//adrbrowsiel/chromium_src/components/metrics/enabled_state_provider_unittest.cc",
    "//adrbrowsiel/chromium_src/components/password_manager/core/browser/password_bubble_experiment_unittest.cc",
    "//adrbrowsiel/chromium_src/components/variations/service/field_trial_unittest.cc",
    "//adrbrowsiel/chromium_src/components/version_info/adrbrowsiel_version_info_unittest.cc",
    "//adrbrowsiel/chromium_src/net/cookies/adrbrowsiel_canonical_cookie_unittest.cc",
    "//adrbrowsiel/chromium_src/services/network/public/cpp/cors/cors_unittest.cc",
    "//adrbrowsiel/common/adrbrowsiel_content_client_unittest.cc",
    "//adrbrowsiel/components/assist_ranker/ranker_model_loader_impl_unittest.cc",
    "//adrbrowsiel/components/adrbrowsiel_private_cdn/private_cdn_helper_unittest.cc",
    "//adrbrowsiel/components/adrbrowsiel_search/browser/adrbrowsiel_search_host_unittest.cc",
    "//adrbrowsiel/components/adrbrowsiel_shields/browser/ad_block_regional_service_unittest.cc",
    "//adrbrowsiel/components/adrbrowsiel_shields/browser/adblock_stub_response_unittest.cc",
    "//adrbrowsiel/components/adrbrowsiel_shields/browser/cosmetic_merge_unittest.cc",
    "//adrbrowsiel/components/adrbrowsiel_shields/browser/csp_merge_unittest.cc",
    "//adrbrowsiel/components/adrbrowsiel_shields/browser/https_everywhere_recently_used_cache_unittest.cpp",
    "//adrbrowsiel/components/content_settings/core/browser/adrbrowsiel_content_settings_pref_provider_unittest.cc",
    "//adrbrowsiel/components/content_settings/core/browser/adrbrowsiel_content_settings_utils_unittest.cc",
    "//adrbrowsiel/components/l10n/common/locale_util_unittest.cc",
    "//adrbrowsiel/components/ntp_background_images/browser/ntp_background_images_service_unittest.cc",
    "//adrbrowsiel/components/ntp_background_images/browser/ntp_background_images_source_unittest.cc",
    "//adrbrowsiel/components/ntp_background_images/browser/view_counter_model_unittest.cc",
    "//adrbrowsiel/components/ntp_background_images/browser/view_counter_service_unittest.cc",
    "//adrbrowsiel/components/ntp_widget_utils/browser/ntp_widget_utils_oauth_unittest.cc",
    "//adrbrowsiel/components/ntp_widget_utils/browser/ntp_widget_utils_region_unittest.cc",
    "//adrbrowsiel/components/p3a/adrbrowsiel_p2a_protocols_unittest.cc",
    "//adrbrowsiel/components/translate/core/browser/translate_language_list_unittest.cc",
    "//adrbrowsiel/components/weekly_storage/weekly_storage_unittest.cc",
    "//adrbrowsiel/third_party/libaddressinput/chromium/chrome_metadata_source_unittest.cc",
    "//adrbrowsiel/vendor/adrbrowsiel_base/random_unittest.cc",
    "//chrome/browser/custom_handlers/test_protocol_handler_registry_delegate.cc",
    "//chrome/browser/custom_handlers/test_protocol_handler_registry_delegate.h",
    "//components/bookmarks/browser/bookmark_model_unittest.cc",
  ]

  defines = adrbrowsiel_service_key_defines

  deps = [
    "//adrbrowsiel/app:command_ids",
    "//adrbrowsiel/app/theme:adrbrowsiel_theme_resources_grit",
    "//adrbrowsiel/base:base_unittests",
    "//adrbrowsiel/browser",
    "//adrbrowsiel/browser/browsing_data",
    "//adrbrowsiel/browser/content_settings:unit_tests",
    "//adrbrowsiel/browser/first_run:unit_tests",
    "//adrbrowsiel/browser/metrics/test:adrbrowsiel_metrics_unit_tests",
    "//adrbrowsiel/browser/net",
    "//adrbrowsiel/browser/new_tab:unittest",
    "//adrbrowsiel/browser/permissions:unit_tests",
    "//adrbrowsiel/browser/profiles:profiles",
    "//adrbrowsiel/browser/safebrowsing",
    "//adrbrowsiel/browser/themes",
    "//adrbrowsiel/browser/tor:unit_tests",
    "//adrbrowsiel/browser/translate/buildflags",
    "//adrbrowsiel/browser/ui",
    "//adrbrowsiel/browser/ui/sidebar:unit_tests",
    "//adrbrowsiel/browser/ui/webui/new_tab_page:unit_tests",
    "//adrbrowsiel/browser/widevine:unittest",
    "//adrbrowsiel/chromium_src/components/autofill_assistant/browser:unit_tests",
    "//adrbrowsiel/common:network_constants",
    "//adrbrowsiel/common:pref_names",
    "//adrbrowsiel/components/adblock_rust_ffi",
    "//adrbrowsiel/components/adrbrowsiel_ads/test:adrbrowsiel_ads_unit_tests",
    "//adrbrowsiel/components/adrbrowsiel_component_updater/browser",
    "//adrbrowsiel/components/adrbrowsiel_private_cdn",
    "//adrbrowsiel/components/adrbrowsiel_referrals/browser",
    "//adrbrowsiel/components/adrbrowsiel_referrals/buildflags",
    "//adrbrowsiel/components/adrbrowsiel_referrals/common",
    "//adrbrowsiel/components/adrbrowsiel_rewards/test:adrbrowsiel_rewards_unit_tests",
    "//adrbrowsiel/components/adrbrowsiel_search/browser",
    "//adrbrowsiel/components/adrbrowsiel_shields/browser",
    "//adrbrowsiel/components/adrbrowsiel_shields/common",
    "//adrbrowsiel/components/adrbrowsiel_wallet/browser/test:adrbrowsiel_wallet_unit_tests",
    "//adrbrowsiel/components/adrbrowsiel_wallet/common/buildflags",
    "//adrbrowsiel/components/child_process_monitor:unittests",
    "//adrbrowsiel/components/ipfs/test:adrbrowsiel_ipfs_unit_tests",
    "//adrbrowsiel/components/l10n/common",
    "//adrbrowsiel/components/ntp_background_images/browser",
    "//adrbrowsiel/components/ntp_background_images/common",
    "//adrbrowsiel/components/ntp_widget_utils/browser",
    "//adrbrowsiel/components/p3a",
    "//adrbrowsiel/components/permissions:unit_tests",
    "//adrbrowsiel/components/sidebar:unit_tests",
    "//adrbrowsiel/components/tor:tor_unit_tests",
    "//adrbrowsiel/components/tor/buildflags",
    "//adrbrowsiel/components/weekly_storage",
    "//adrbrowsiel/net/proxy_resolution:unit_tests",
    "//adrbrowsiel/vendor/bat-native-ledger/test:bat_native_ledger_tests",
    "//adrbrowsiel/vendor/adrbrowsiel_base",
    "//chrome:browser_dependencies",
    "//chrome:child_dependencies",
    "//chrome/app:command_ids",
    "//chrome/test:test_support",
    "//components/assist_ranker",
    "//components/assist_ranker/proto",
    "//components/bookmarks/browser",
    "//components/bookmarks/common",
    "//components/content_settings/core/test:test_support",
    "//components/country_codes",
    "//components/domain_reliability:domain_reliability",
    "//components/language/core/browser",
    "//components/os_crypt:test_support",
    "//components/permissions",
    "//components/pref_registry",
    "//components/prefs",
    "//components/prefs:test_support",
    "//components/query_parser",
    "//components/signin/public/base",
    "//components/sync_preferences",
    "//components/translate/core/browser:test_support",
    "//components/user_prefs",
    "//components/variations/service:buildflags",
    "//components/version_info",
    "//content/public/common",
    "//content/test:test_support",
    "//extensions/common:common_constants",
    "//google_apis/gcm",
    "//google_apis/gcm:test_support",
    "//mojo/core/embedder",
    "//services/device/public/cpp:test_support",
    "//services/network:test_support",
    "//services/network/public/cpp",
    "//services/preferences/public/cpp",
  ]

  if (decentralized_dns_enabled) {
    deps += [ "//adrbrowsiel/browser/decentralized_dns/test:unit_tests" ]
  }

  if (toolkit_views) {
    deps += [ "//chrome/browser/ui/views" ]
  }

  data = [ "data/" ]

  configs += [ "//adrbrowsiel/build/geolocation" ]

  public_deps = [
    ":adrbrowsiel_test_support_unit",
    "//base",
    "//base/test:test_support",
    "//adrbrowsiel:browser_dependencies",
    "//adrbrowsiel/browser",
    "//adrbrowsiel/common",
    "//adrbrowsiel/components/content_settings/core/browser",
    "//adrbrowsiel/renderer",
    "//adrbrowsiel/utility",
    "//testing/gtest",
  ]

  if (!is_android) {
    sources += [
      "../utility/importer/chrome_importer_unittest.cc",
      "//adrbrowsiel/app/adrbrowsiel_command_line_helper_unittest.cc",
      "//adrbrowsiel/browser/resources/settings/brandcode_config_fetcher_unittest.cc",
      "//adrbrowsiel/browser/resources/settings/reset_report_uploader_unittest.cc",
      "//adrbrowsiel/browser/themes/adrbrowsiel_theme_service_unittest.cc",
      "//adrbrowsiel/browser/ui/toolbar/adrbrowsiel_location_bar_model_delegate_unittest.cc",
      "//adrbrowsiel/browser/ui/views/accelerator_table_unittest.cc",
      "//adrbrowsiel/chromium_src/chrome/browser/devtools/url_constants_unittest.cc",
      "//adrbrowsiel/chromium_src/chrome/browser/profiles/profile_avatar_icon_util_unittest.cc",
      "//adrbrowsiel/chromium_src/chrome/browser/ui/bookmarks/adrbrowsiel_bookmark_context_menu_controller_unittest.cc",
      "//chrome/browser/push_messaging/push_messaging_app_identifier_unittest.cc",
      "//chrome/browser/push_messaging/push_messaging_notification_manager_unittest.cc",
      "//chrome/browser/push_messaging/push_messaging_service_unittest.cc",
      "//chrome/common/importer/mock_importer_bridge.cc",
      "//chrome/common/importer/mock_importer_bridge.h",
      "//components/gcm_driver/account_tracker_unittest.cc",
      "//components/gcm_driver/gcm_account_mapper_unittest.cc",
      "//components/gcm_driver/gcm_account_tracker_unittest.cc",
      "//components/gcm_driver/gcm_client_impl_unittest.cc",
      "//components/gcm_driver/gcm_delayed_task_controller_unittest.cc",
      "//components/gcm_driver/gcm_driver_desktop_unittest.cc",
      "//components/gcm_driver/gcm_driver_unittest.cc",

      # TODO(samartnik): this should work on Android, we will review it once unit tests are set up on CI
      "//adrbrowsiel/chromium_src/chrome/browser/external_protocol/external_protocol_handler_unittest.cc",
      "//adrbrowsiel/chromium_src/components/search_engines/adrbrowsiel_template_url_prepopulate_data_unittest.cc",
      "//adrbrowsiel/chromium_src/components/search_engines/adrbrowsiel_template_url_service_util_unittest.cc",
      "//adrbrowsiel/chromium_src/components/translate/core/browser/translate_manager_unittest.cc",
      "//adrbrowsiel/components/adrbrowsiel_shields/browser/adrbrowsiel_shields_util_unittest.cc",
      "//adrbrowsiel/components/omnibox/browser/fake_autocomplete_provider_client.cc",
      "//adrbrowsiel/components/omnibox/browser/fake_autocomplete_provider_client.h",
      "//adrbrowsiel/components/omnibox/browser/suggested_sites_provider_unittest.cc",
      "//adrbrowsiel/components/omnibox/browser/topsites_provider_unittest.cc",
    ]
  }

  if (!is_android && !is_ios) {
    deps += [ "//adrbrowsiel/browser/ui/toolbar:adrbrowsiel_app_menu_unit_test" ]
  }

  # On Windows, adrbrowsiel_install_static_unittests covers channel test.
  if (is_mac || is_linux) {
    sources += [ "//adrbrowsiel/common/adrbrowsiel_channel_info_unittest.cc" ]
  }

  if (is_mac) {
    sources += [
      "//adrbrowsiel/chromium_src/chrome/browser/shell_integration_unittest_mac.cc",
      "//adrbrowsiel/chromium_src/chrome/common/chrome_constants_unittest_mac.cc",
    ]
  }

  if (binance_enabled) {
    sources +=
        [ "//adrbrowsiel/components/binance/browser/binance_json_parser_unittest.cc" ]
    deps += [
      "//adrbrowsiel/components/binance/browser",
      "//adrbrowsiel/components/content_settings/core/common",
    ]
  }

  if (gemini_enabled) {
    sources +=
        [ "//adrbrowsiel/components/gemini/browser/gemini_json_parser_unittest.cc" ]
    deps += [
      "//adrbrowsiel/components/binance/browser",
      "//adrbrowsiel/components/content_settings/core/common",
      "//adrbrowsiel/components/gemini/browser",
    ]
  }

  if (crypto_dot_com_enabled) {
    sources += [ "//adrbrowsiel/components/crypto_dot_com/browser/crypto_dot_com_json_parser_unittest.cc" ]
    deps += [ "//adrbrowsiel/components/crypto_dot_com/browser" ]
  }

  if (is_linux) {
    configs += [ "//adrbrowsiel/build/linux:linux_channel_names" ]
  }

  if (is_android) {
    deps += [
      ":adrbrowsiel_public_test_apk",
      "//adrbrowsiel:adrbrowsiel_pak_assets",
      "//chrome:chrome_android_core",
      "//chrome/android:chrome_apk_paks",
      "//chrome/test/android:chrome_java_test_support",
      "//components/gcm_driver/instance_id/android:instance_id_driver_test_support_java",
      "//v8:v8_external_startup_data_assets",
    ]
    data += [
      "$root_gen_dir/chrome/android/chrome_apk_paks/chrome_100_percent.pak",
      "$root_gen_dir/chrome/android/chrome_apk_paks/locales/en-US.pak",
      "$root_gen_dir/chrome/android/chrome_apk_paks/resources.pak",
      "$root_out_dir/adrbrowsiel_100_percent.pak",
      "$root_out_dir/adrbrowsiel_resources.pak",
      "//adrbrowsiel/components/adrbrowsiel_perf_predictor/resources/entities-httparchive-nostats.json",
    ]
  } else {
    deps += [ ":adrbrowsiel_installer_unittests" ]
  }

  if (enable_extensions) {
    sources += [
      "//adrbrowsiel/browser/extensions/api/adrbrowsiel_extensions_api_client_unittest.cc",
      "//adrbrowsiel/browser/extensions/chrome_content_verifier_delegate_unittest.cc",
      "//adrbrowsiel/browser/extensions/install_verifier_unittest.cc",
      "//adrbrowsiel/chromium_src/extensions/browser/sandboxed_unpacker_unittest.cc",
      "//adrbrowsiel/common/importer/chrome_importer_utils_unittest.cc",
      "//chrome/browser/extensions/extension_service_test_base.cc",
      "//chrome/browser/extensions/extension_service_test_base.h",
    ]

    deps += [
      "//adrbrowsiel/browser/extensions",
      "//adrbrowsiel/common/importer",
      "//chrome/browser/extensions",
      "//components/crx_file",
      "//components/policy/core/common:test_support",
      "//extensions/browser:test_support",
      "//extensions/browser/api/web_request",
      "//url",
    ]
  }

  if (enable_adrbrowsiel_referrals) {
    sources += [ "//adrbrowsiel/browser/adrbrowsiel_stats/adrbrowsiel_stats_updater_unittest.cc" ]

    deps += [
      # This is only used in the unit test, not the browser test.
      # TODO(keur): Reminder to move this out when we migrate
      # stats browser tests into unit tests.
      "//adrbrowsiel/browser/adrbrowsiel_stats:stats_updater",
      "//adrbrowsiel/components/adrbrowsiel_ads/browser:testutil",
      "//adrbrowsiel/components/adrbrowsiel_stats/browser",
      "//adrbrowsiel/vendor/bat-native-ads",
    ]

    if (!is_android) {
      sources += [
        # TODO(samartnik): this should work on Android, we will review it once unit tests are set up on CI
        "//adrbrowsiel/browser/net/adrbrowsiel_referrals_network_delegate_helper_unittest.cc",
      ]
    }
  }

  if (enable_adrbrowsiel_webtorrent) {
    sources += [
      "//adrbrowsiel/browser/extensions/adrbrowsiel_webtorrent_navigation_throttle_unittest.cc",
      "//adrbrowsiel/browser/net/adrbrowsiel_torrent_redirect_network_delegate_helper_unittest.cc",
    ]

    deps += [
      "//adrbrowsiel/common:pref_names",
      "//adrbrowsiel/components/adrbrowsiel_referrals/browser",
    ]
  }

  if (adrbrowsiel_wallet_enabled) {
    sources += [ "//adrbrowsiel/browser/extensions/adrbrowsiel_wallet_unittest.cc" ]
    deps += [
      "//adrbrowsiel/browser/adrbrowsiel_wallet",
      "//adrbrowsiel/common:pref_names",
      "//adrbrowsiel/components/adrbrowsiel_wallet/browser",
      "//adrbrowsiel/components/adrbrowsiel_wallet/common",
    ]
  }

  if (enable_adrbrowsiel_translate_go) {
    sources += [ "//adrbrowsiel/browser/net/adrbrowsiel_translate_redirect_network_delegate_helper_unittest.cc" ]
  }

  if (enable_adrbrowsiel_translate_extension) {
    sources += [ "//adrbrowsiel/browser/ui/views/translate/adrbrowsiel_translate_bubble_view_unittest.cc" ]

    deps += [
      "//adrbrowsiel/browser/ui",
      "//components/language/core/common",
    ]
  }

  if (enable_adrbrowsiel_sync) {
    sources += [
      "//adrbrowsiel/components/adrbrowsiel_sync/crypto/crypto_unittest.cc",
      "//components/sync/base/model_type_unittest.cc",
      "//components/sync/driver/sync_auth_manager_unittest.cc",
      "//components/sync_device_info/device_info_sync_bridge_unittest.cc",
    ]

    deps += [
      "//adrbrowsiel/components/adrbrowsiel_sync:crypto",
      "//adrbrowsiel/components/adrbrowsiel_sync:network_time_helper",
      "//adrbrowsiel/components/signin/public/identity_manager:unit_tests",
      "//adrbrowsiel/components/sync/driver:unit_tests",
      "//adrbrowsiel/components/sync/engine:unit_tests",
      "//components/signin/public/identity_manager:test_support",
    ]
  }

  if (enable_adrbrowsiel_wayback_machine) {
    sources += [ "//adrbrowsiel/components/adrbrowsiel_wayback_machine/adrbrowsiel_wayback_machine_utils_unittest.cc" ]

    deps += [ "//adrbrowsiel/components/adrbrowsiel_wayback_machine" ]
  }

  if (enable_adrbrowsiel_perf_predictor) {
    sources += [
      "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser/bandwidth_linreg_unittest.cc",
      "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser/bandwidth_savings_predictor_unittest.cc",
      "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser/named_third_party_registry_unittest.cc",
      "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser/p3a_bandwidth_savings_tracker_unittest.cc",
    ]

    deps += [
      "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser",
      "//components/page_load_metrics/common",
    ]
  }

  if (enable_speedreader) {
    sources += [
      "//adrbrowsiel/components/speedreader/rust/ffi/speedreader_unittest.cc",
      "//adrbrowsiel/components/speedreader/speedreader_util_unittest.cc",
    ]

    deps += [ "//adrbrowsiel/components/speedreader" ]
  }
  if (ipfs_enabled) {
    deps += [ "//adrbrowsiel/browser/ipfs/test:unittests" ]
  }
}

if (!is_android && !is_ios) {
  test("adrbrowsiel_installer_unittests") {
    deps = [
      "//base/test:run_all_unittests",
      "//base/test:test_support",
    ]

    if (is_mac) {
      # See chromium_src/base/mac/foundation_util.mm for why this is needed.
      deps += [ "//chrome/common" ]
    }

    if (is_win) {
      sources = [
        "//adrbrowsiel/chromium_src/chrome/install_static/adrbrowsiel_install_details_unittest.cc",
        "//adrbrowsiel/chromium_src/chrome/install_static/adrbrowsiel_install_modes_unittest.cc",
        "//adrbrowsiel/chromium_src/chrome/install_static/adrbrowsiel_install_util_unittest.cc",
        "//adrbrowsiel/chromium_src/chrome/install_static/adrbrowsiel_product_install_details_unittest.cc",
        "//adrbrowsiel/chromium_src/chrome/install_static/adrbrowsiel_user_data_dir_win_unittest.cc",
        "//adrbrowsiel/chromium_src/chrome/installer/mini_installer/adrbrowsiel_mini_installer_unittest.cc",
      ]
      include_dirs = [ "$target_gen_dir" ]
      deps += [
        "//base",
        "//chrome/chrome_elf:nt_registry",
        "//chrome/install_static:install_static_util",
        "//chrome/install_static/test:test_support",
        "//chrome/installer/mini_installer:lib",
        "//components/version_info",
        "//components/version_info:channel",
      ]
      public_deps = [
        "//testing/gmock",
        "//testing/gtest",
      ]
    }
  }
}

group("adrbrowsiel_browser_tests_deps") {
  testonly = true

  # force these to build for tests
  deps = [
    "//adrbrowsiel",
    "//adrbrowsiel:browser_dependencies",
    "//adrbrowsiel:child_dependencies",
  ]
}

static_library("browser_test_support") {
  testonly = true
  public_deps = [ "//chrome/test:test_support" ]

  sources = [
    "base/adrbrowsiel_test_launcher_delegate.cc",
    "base/adrbrowsiel_test_launcher_delegate.h",
  ]

  deps = [ "//chrome/browser" ]
}

static_library("browser_tests_runner") {
  testonly = true

  if (is_win) {
    deps = [ "//chrome/installer/util:strings" ]
  }

  public_deps = [ ":browser_test_support" ]

  sources = [ "base/browser_tests_main.cc" ]
}

if (!is_android) {
  test("adrbrowsiel_browser_tests") {
    testonly = true

    sources = [
      "//adrbrowsiel/app/adrbrowsiel_main_delegate_browsertest.cc",
      "//adrbrowsiel/app/adrbrowsiel_main_delegate_runtime_flags_browsertest.cc",
      "//adrbrowsiel/browser/adrbrowsiel_content_browser_client_browsertest.cc",
      "//adrbrowsiel/browser/adrbrowsiel_prefs_browsertest.cc",
      "//adrbrowsiel/browser/adrbrowsiel_resources_browsertest.cc",
      "//adrbrowsiel/browser/adrbrowsiel_scheme_load_browsertest.cc",
      "//adrbrowsiel/browser/adrbrowsiel_search/adrbrowsiel_search_browsertest.cc",
      "//adrbrowsiel/browser/adrbrowsiel_shields/ad_block_service_browsertest.cc",
      "//adrbrowsiel/browser/adrbrowsiel_shields/ad_block_service_browsertest.h",
      "//adrbrowsiel/browser/adrbrowsiel_shields/adrbrowsiel_shields_web_contents_observer_browsertest.cc",
      "//adrbrowsiel/browser/adrbrowsiel_shields/cookie_pref_service_browsertest.cc",
      "//adrbrowsiel/browser/adrbrowsiel_shields/domain_block_page_browsertest.cc",
      "//adrbrowsiel/browser/adrbrowsiel_stats/adrbrowsiel_stats_updater_browsertest.cc",
      "//adrbrowsiel/browser/devtools/adrbrowsiel_devtools_ui_bindings_browsertest.cc",
      "//adrbrowsiel/browser/extensions/api/adrbrowsiel_shields_api_browsertest.cc",
      "//adrbrowsiel/browser/extensions/api/adrbrowsiel_theme_api_browsertest.cc",
      "//adrbrowsiel/browser/extensions/adrbrowsiel_base_local_data_files_browsertest.cc",
      "//adrbrowsiel/browser/extensions/adrbrowsiel_base_local_data_files_browsertest.h",
      "//adrbrowsiel/browser/extensions/adrbrowsiel_extension_functional_test.cc",
      "//adrbrowsiel/browser/extensions/adrbrowsiel_extension_functional_test.h",
      "//adrbrowsiel/browser/extensions/adrbrowsiel_extension_provider_browsertest.cc",
      "//adrbrowsiel/browser/extensions/adrbrowsiel_theme_event_router_browsertest.cc",
      "//adrbrowsiel/browser/net/adrbrowsiel_network_delegate_browsertest.cc",
      "//adrbrowsiel/browser/net/adrbrowsiel_network_delegate_hsts_fingerprinting_browsertest.cc",
      "//adrbrowsiel/browser/net/adrbrowsiel_site_hacks_network_delegate_helper_browsertest.cc",
      "//adrbrowsiel/browser/net/adrbrowsiel_system_request_handler_browsertest.cc",
      "//adrbrowsiel/browser/net/global_privacy_control_network_delegate_helper_browsertest.cc",
      "//adrbrowsiel/browser/policy/adrbrowsiel_policy_browsertest.cc",
      "//adrbrowsiel/browser/profiles/adrbrowsiel_bookmark_model_loaded_observer_browsertest.cc",
      "//adrbrowsiel/browser/profiles/adrbrowsiel_profile_manager_browsertest.cc",
      "//adrbrowsiel/browser/renderer_context_menu/adrbrowsiel_mock_render_view_context_menu.cc",
      "//adrbrowsiel/browser/renderer_context_menu/adrbrowsiel_mock_render_view_context_menu.h",
      "//adrbrowsiel/browser/renderer_context_menu/adrbrowsiel_spelling_menu_observer_browsertest.cc",
      "//adrbrowsiel/browser/search_engines/search_engine_provider_service_browsertest.cc",
      "//adrbrowsiel/browser/search_engines/search_engine_tracker_browsertest.cc",
      "//adrbrowsiel/browser/themes/adrbrowsiel_dark_mode_prefs_migration_browsertest.cc",
      "//adrbrowsiel/browser/themes/adrbrowsiel_theme_service_browsertest.cc",
      "//adrbrowsiel/browser/ui/bookmark/bookmark_tab_helper_browsertest.cc",
      "//adrbrowsiel/browser/ui/adrbrowsiel_browser_command_controller_browsertest.cc",
      "//adrbrowsiel/browser/ui/content_settings/adrbrowsiel_autoplay_blocked_image_model_browsertest.cc",
      "//adrbrowsiel/browser/ui/toolbar/adrbrowsiel_app_menu_model_browsertest.cc",
      "//adrbrowsiel/browser/ui/views/bookmarks/bookmark_bar_browsertest.cc",
      "//adrbrowsiel/browser/ui/views/adrbrowsiel_actions/adrbrowsiel_actions_container_browsertest.cc",
      "//adrbrowsiel/browser/ui/views/omnibox/adrbrowsiel_omnibox_view_views_browsertest.cc",
      "//adrbrowsiel/browser/ui/views/omnibox/omnibox_autocomplete_browsertest.cc",
      "//adrbrowsiel/browser/ui/views/profiles/adrbrowsiel_profile_menu_view_browsertest.cc",
      "//adrbrowsiel/browser/ui/views/tabs/adrbrowsiel_tab_context_menu_contents_browsertest.cc",
      "//adrbrowsiel/browser/ui/views/toolbar/adrbrowsiel_toolbar_view_browsertest.cc",
      "//adrbrowsiel/browser/ui/webui/adrbrowsiel_welcome_ui_browsertest.cc",
      "//adrbrowsiel/browser/ui/webui/new_tab_page/adrbrowsiel_new_tab_ui_browsertest.cc",
      "//adrbrowsiel/chromium_src/chrome/browser/media/router/media_router_feature_browsertest.cc",
      "//adrbrowsiel/chromium_src/chrome/browser/safe_browsing/download_protection/check_client_download_request_base_browsertest.cc",
      "//adrbrowsiel/chromium_src/chrome/browser/ui/views/location_bar/location_bar_view_browsertest.cc",
      "//adrbrowsiel/chromium_src/chrome/browser/ui/views/tabs/tab_hover_card_bubble_view_browsertest.cc",
      "//adrbrowsiel/chromium_src/components/content_settings/core/browser/adrbrowsiel_content_settings_registry_browsertest.cc",
      "//adrbrowsiel/chromium_src/components/favicon/core/favicon_database_browsertest.cc",
      "//adrbrowsiel/chromium_src/third_party/blink/public/platform/disable_client_hints_browsertest.cc",
      "//adrbrowsiel/chromium_src/third_party/blink/renderer/core/frame/reporting_observer_browsertest.cc",
      "//adrbrowsiel/common/adrbrowsiel_channel_info_browsertest.cc",
      "//adrbrowsiel/components/adrbrowsiel_shields/browser/https_everywhere_service_browsertest.cc",
      "//adrbrowsiel/components/content_settings/renderer/adrbrowsiel_content_settings_agent_impl_autoplay_browsertest.cc",
      "//adrbrowsiel/components/content_settings/renderer/adrbrowsiel_content_settings_agent_impl_browsertest.cc",
      "//adrbrowsiel/components/l10n/browser/locale_helper_mock.cc",
      "//adrbrowsiel/components/l10n/browser/locale_helper_mock.h",
      "//adrbrowsiel/third_party/blink/renderer/modules/adrbrowsiel/navigator_browsertest.cc",
      "//chrome/browser/extensions/browsertest_util.cc",
      "//chrome/browser/extensions/browsertest_util.h",
      "//chrome/browser/extensions/extension_browsertest.cc",
      "//chrome/browser/extensions/extension_browsertest.h",
      "//chrome/browser/extensions/extension_function_test_utils.cc",
      "//chrome/browser/extensions/extension_function_test_utils.h",
      "//chrome/browser/media/media_browsertest.cc",
      "//chrome/browser/media/media_browsertest.h",
      "//chrome/browser/ui/test/test_browser_dialog.cc",
      "//chrome/browser/ui/test/test_browser_dialog.h",
      "//chrome/browser/ui/test/test_browser_ui.cc",
      "//chrome/browser/ui/test/test_browser_ui.h",
    ]

    if (is_mac) {
      sources += [
        "//chrome/browser/ui/test/test_browser_dialog_mac.h",
        "//chrome/browser/ui/test/test_browser_dialog_mac.mm",
      ]
    }

    deps = [
      "//adrbrowsiel/browser/autoplay:browser_tests",
      "//adrbrowsiel/browser/browsing_data:browser_tests",
      "//adrbrowsiel/browser/farbling:browser_tests",
      "//adrbrowsiel/browser/permissions:browser_tests",
      "//adrbrowsiel/browser/tor:browser_tests",
      "//adrbrowsiel/browser/ui/sidebar:browser_tests",
      "//adrbrowsiel/browser/ui/tabs/test:browser_tests",
      "//adrbrowsiel/browser/widevine:browser_tests",
      "//adrbrowsiel/chromium_src/third_party/blink/renderer/modules:browser_tests",
      "//adrbrowsiel/components/adrbrowsiel_search/browser",
      "//adrbrowsiel/components/adrbrowsiel_shields/common",
      "//adrbrowsiel/renderer/test:browser_tests",
      "//components/security_interstitials/content:security_interstitial_page",
      "//media:test_support",
      "//testing/gmock",
    ]

    if (decentralized_dns_enabled) {
      deps += [ "//adrbrowsiel/browser/decentralized_dns/test:browser_tests" ]
    }

    if (enable_adrbrowsiel_perf_predictor) {
      sources += [ "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser/perf_predictor_tab_helper_browsertest.cc" ]

      deps += [
        "//adrbrowsiel/components/adrbrowsiel_perf_predictor/browser",
        "//adrbrowsiel/components/adrbrowsiel_perf_predictor/common",
        "//components/user_prefs",
      ]
    }

    if (enable_greaselion) {
      sources += [ "//adrbrowsiel/browser/greaselion/greaselion_browsertest.cc" ]

      deps += [
        "//adrbrowsiel/components/greaselion/browser",
        "//chrome/browser",
      ]
    }

    if (adrbrowsiel_wallet_enabled) {
      sources += [
        "//adrbrowsiel/browser/adrbrowsiel_wallet/eth_json_rpc_controller_browsertest.cc",
        "//adrbrowsiel/browser/extensions/api/adrbrowsiel_wallet_api_browsertest.cc",
        "//adrbrowsiel/browser/extensions/adrbrowsiel_wallet_apitest.cc",
        "//adrbrowsiel/browser/ui/views/toolbar/wallet_button_browsertest.cc",
        "//adrbrowsiel/browser/ui/webui/adrbrowsiel_wallet/wallet_panel_ui_browsertest.cc",
      ]

      deps += [
        "//adrbrowsiel/browser/infobars",
        "//adrbrowsiel/components/adrbrowsiel_wallet/browser",
        "//adrbrowsiel/components/adrbrowsiel_wallet/common",
      ]
    }

    if (binance_enabled) {
      sources += [
        "//adrbrowsiel/components/binance/browser/binance_service_browsertest.cc",
      ]

      deps += [
        "//adrbrowsiel/components/binance/browser",
        "//components/country_codes",
      ]
    }

    if (gemini_enabled) {
      sources +=
          [ "//adrbrowsiel/components/gemini/browser/gemini_service_browsertest.cc" ]
      deps += [ "//adrbrowsiel/components/gemini/browser" ]
    }

    if (crypto_dot_com_enabled) {
      sources += [ "//adrbrowsiel/components/crypto_dot_com/browser/crypto_dot_com_service_browsertest.cc" ]
    }

    if (adrbrowsiel_rewards_enabled) {
      sources += [
        "//adrbrowsiel/components/adrbrowsiel_ads/browser/ads_service_browsertest.cc",
        "//adrbrowsiel/components/adrbrowsiel_ads/browser/notification_helper_mock.cc",
        "//adrbrowsiel/components/adrbrowsiel_ads/browser/notification_helper_mock.h",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_context_helper.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_context_helper.h",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_context_util.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_context_util.h",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_contribution.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_contribution.h",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_network_util.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_network_util.h",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_promotion.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_promotion.h",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_response.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_response.h",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_util.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/common/rewards_browsertest_util.h",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/rewards_browsertest.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/rewards_contribution_browsertest.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/rewards_flag_browsertest.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/rewards_notification_browsertest.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/rewards_p3a_browsertest.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/rewards_promotion_browsertest.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/rewards_publisher_browsertest.cc",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser/test/rewards_state_browsertest.cc",
      ]

      deps += [
        "//adrbrowsiel/browser/adrbrowsiel_ads",
        "//adrbrowsiel/components/adrbrowsiel_ads/browser",
        "//adrbrowsiel/components/adrbrowsiel_ads/common",
        "//adrbrowsiel/components/adrbrowsiel_rewards/browser",
        "//adrbrowsiel/vendor/bat-native-ads",
        "//adrbrowsiel/vendor/bat-native-ledger",
        "//adrbrowsiel/vendor/bat-native-ledger:publishers_proto",
      ]

      configs += [ "//adrbrowsiel/vendor/bat-native-ads:internal_config" ]
      configs += [ "//adrbrowsiel/vendor/bat-native-ledger:internal_config" ]
    }

    if (enable_adrbrowsiel_wayback_machine) {
      sources += [ "//adrbrowsiel/components/adrbrowsiel_wayback_machine/adrbrowsiel_wayback_machine_browsertest.cc" ]
    }

    if (enable_speedreader) {
      sources += [ "//adrbrowsiel/browser/speedreader/speedreader_browsertest.cc" ]
      deps += [ "//adrbrowsiel/components/speedreader" ]
    }

    if (is_win || is_linux) {
      sources += [ "//adrbrowsiel/browser/renderer_context_menu/adrbrowsiel_spelling_options_submenu_observer_browsertest.cc" ]
      deps += [
        "//adrbrowsiel/browser/renderer_context_menu",
        "//components/language/core/browser",
      ]
    }

    # API tests
    sources += [
      "//adrbrowsiel/browser/extensions/adrbrowsiel_shields_apitest.cc",
      "//chrome/browser/extensions/extension_apitest.cc",
      "//chrome/browser/extensions/extension_apitest.h",
    ]

    if (is_linux) {
      sources += [
        "//adrbrowsiel/browser/ui/views/adrbrowsiel_views_delegate_linux_browsertest.cc",
      ]
      configs += [ "//adrbrowsiel/build/linux:linux_channel_names" ]
      deps += [ "//chrome/app/theme:chrome_unscaled_resources_grit" ]
    }

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    deps += [
      ":adrbrowsiel_browser_tests_deps",
      "//adrbrowsiel/app:adrbrowsiel_generated_resources_grit",
      "//adrbrowsiel/app:command_ids",
      "//adrbrowsiel/app/theme:adrbrowsiel_theme_resources_grit",
      "//adrbrowsiel/app/theme:adrbrowsiel_unscaled_resources_grit",
      "//adrbrowsiel/browser",
      "//adrbrowsiel/browser/adrbrowsiel_stats:stats_updater",
      "//adrbrowsiel/browser/devtools",
      "//adrbrowsiel/browser/ephemeral_storage:ephemeral_storage_tests",
      "//adrbrowsiel/browser/extensions",
      "//adrbrowsiel/browser/net",
      "//adrbrowsiel/browser/profiles",
      "//adrbrowsiel/browser/themes",
      "//adrbrowsiel/browser/tor",
      "//adrbrowsiel/browser/ui",
      "//adrbrowsiel/browser/ui/tabs",
      "//adrbrowsiel/common:network_constants",
      "//adrbrowsiel/common:pref_names",
      "//adrbrowsiel/common:switches",
      "//adrbrowsiel/components/adrbrowsiel_component_updater/browser",
      "//adrbrowsiel/components/adrbrowsiel_referrals/browser",
      "//adrbrowsiel/components/adrbrowsiel_referrals/common",
      "//adrbrowsiel/components/adrbrowsiel_rewards/browser/buildflags",
      "//adrbrowsiel/components/adrbrowsiel_rewards/common",
      "//adrbrowsiel/components/adrbrowsiel_shields/browser",
      "//adrbrowsiel/components/adrbrowsiel_shields/common",
      "//adrbrowsiel/components/adrbrowsiel_sync:prefs",
      "//adrbrowsiel/components/adrbrowsiel_sync/buildflags",
      "//adrbrowsiel/components/adrbrowsiel_wallet/common/buildflags",
      "//adrbrowsiel/components/adrbrowsiel_wayback_machine",
      "//adrbrowsiel/components/adrbrowsiel_wayback_machine:buildflags",
      "//adrbrowsiel/components/content_settings/renderer",
      "//adrbrowsiel/components/crypto_dot_com/browser",
      "//adrbrowsiel/components/ipfs/buildflags",
      "//adrbrowsiel/components/l10n/browser",
      "//adrbrowsiel/components/tor",
      "//adrbrowsiel/components/tor:utils",
      "//adrbrowsiel/components/tor/buildflags",
      "//build:chromeos_buildflags",
      "//chrome/app:command_ids",
      "//chrome/browser:browser_process",
      "//chrome/browser:theme_properties",
      "//chrome/browser/media/router:media_router_feature",
      "//chrome/browser/ui",
      "//chrome/browser/web_applications/components",
      "//chrome/test:test_support_ui",
      "//components/bookmarks/browser",
      "//components/content_settings/browser",
      "//components/content_settings/core/browser",
      "//components/content_settings/core/common",
      "//components/content_settings/renderer",
      "//components/crx_file",
      "//components/embedder_support",
      "//components/federated_learning:federated_learning",
      "//components/language/core/common",
      "//components/network_time",
      "//components/permissions",
      "//components/policy/core/browser",
      "//components/policy/core/common:test_support",
      "//components/prefs",
      "//components/renderer_context_menu",
      "//components/safe_browsing/content/web_ui",
      "//components/safe_browsing/core:features",
      "//components/spellcheck/browser",
      "//extensions/browser:test_support",
      "//extensions/common:common_constants",
      "//extensions/common:test_support",
      "//ppapi/buildflags",
      "//services/device/public/cpp:device_features",
      "//services/network:network_service",
      "//third_party/blink/public/common",
      "//ui/compositor:test_support",
      "//ui/views",
    ]
    if (ipfs_enabled) {
      deps += [
        "//adrbrowsiel/browser/ipfs/test:browsertests",
        "//adrbrowsiel/components/ipfs:ipfs",
      ]
    }
    public_deps = [ ":browser_tests_runner" ]
  }
} else {  # if (!is_android) {
  group("adrbrowsiel_browser_tests") {
  }
}

# All in this section is for running instrumentation java tests
if (is_android) {
  adrbrowsiel_public_test_manifest_package = "com.adrbrowsiel.browser.tests"

  adrbrowsiel_public_test_apk_manifest =
      "$root_gen_dir/adrbrowsiel_public_test_apk_manifest/AndroidManifest.xml"

  jinja_template("adrbrowsiel_public_test_apk_manifest") {
    input = "//adrbrowsiel/android/javatests/AndroidManifest.xml"
    includes = [ "//chrome/android/java/AndroidManifest.xml" ]
    output = adrbrowsiel_public_test_apk_manifest
    variables = default_chrome_public_jinja_variables
    variables += [
      "manifest_package=$adrbrowsiel_public_test_manifest_package",
      "min_sdk_version=19",
      "target_sdk_version=$android_sdk_version",
    ]
  }

  chrome_public_common_apk_or_module_tmpl("adrbrowsiel_public_test_apk") {
    testonly = true
    target_type = "instrumentation_test_apk"
    apk_name = "adrbrowsielPublicTest"
    android_manifest = adrbrowsiel_public_test_apk_manifest
    android_manifest_dep = ":adrbrowsiel_public_test_apk_manifest"
    shared_libraries = [ "//chrome/android:libchromefortest" ]
    if (!is_java_debug) {
      proguard_enabled = true
      proguard_configs = [
        "//adrbrowsiel/android/java/proguard.flags",
        "//adrbrowsiel/android/java/apk_for_test.flags",
      ]
    }

    sources = [
      "//adrbrowsiel/android/javatests/org/chromium/chrome/browser/adrbrowsielPrivateTabTest.java",
      "//adrbrowsiel/android/javatests/org/chromium/chrome/browser/BytecodeTest.java",
      "//adrbrowsiel/android/javatests/org/chromium/chrome/browser/password_manager/settings/adrbrowsielPasswordSettingsTest.java",
      "//adrbrowsiel/android/javatests/org/chromium/chrome/browser/privacy/settings/adrbrowsielPrivacySettingsTest.java",
      "//adrbrowsiel/android/javatests/org/chromium/chrome/browser/safe_browsing/settings/adrbrowsielSafeBrowsingSettingsFragmentTest.java",
      "//adrbrowsiel/android/javatests/org/chromium/chrome/browser/safety_check/adrbrowsielSafetyCheckSettingsFragmentTest.java",
    ]

    deps = [
      "//base:base_java",
      "//base:base_java_test_support",
      "//chrome/android:chrome_apk_pak_assets",
      "//chrome/android:chrome_public_base_module_java_for_test",
      "//chrome/browser/android/lifecycle:java",
      "//chrome/browser/browser_controls/android:java",
      "//chrome/browser/feed/android:java",
      "//chrome/browser/flags:java",
      "//chrome/browser/fullscreen/android:java",
      "//chrome/browser/password_manager/android:java",
      "//chrome/browser/preferences:java",
      "//chrome/browser/privacy_sandbox/android:java",
      "//chrome/browser/safe_browsing/android:java",
      "//chrome/browser/safety_check/android:java",
      "//chrome/browser/settings:test_support_java",
      "//chrome/browser/tab:java",
      "//chrome/browser/tabmodel:java",
      "//chrome/browser/ui/android/appmenu:java",
      "//chrome/browser/ui/android/theme:java",
      "//chrome/browser/ui/android/toolbar:java",
      "//chrome/browser/ui/messages/android:java",
      "//chrome/test/android:chrome_java_test_support",
      "//components/browser_ui/widget/android:java",
      "//components/embedder_support/android:browser_context_java",
      "//components/password_manager/core/browser:password_manager_java_enums",
      "//components/permissions/android:java",
      "//components/search_engines/android:java",
      "//components/sync/android:sync_java",
      "//third_party/android_support_test_runner:runner_java",
      "//third_party/androidx:androidx_appcompat_appcompat_java",
      "//third_party/androidx:androidx_preference_preference_java",
      "//third_party/junit",
      "//ui/android:ui_no_recycler_view_java",
    ]
  }
}  # if (is_android) {
