# Group depending on upstream's counterpart to make it easier to manage
# dependencies in adrbrowsiel/ (//chrome/utility does not depend on //adrbrowsiel/utility,
# so //adrbrowsiel/utility becomes essentially an alias for //chrome/utility now).
group("utility") {
  public_deps = [ "//chrome/utility" ]
}
