import("//adrbrowsiel/utility/importer/sources.gni")

adrbrowsiel_utility_sources = [
  "//adrbrowsiel/utility/adrbrowsiel_content_utility_client.cc",
  "//adrbrowsiel/utility/adrbrowsiel_content_utility_client.h",
]
adrbrowsiel_utility_sources += adrbrowsiel_utility_importer_sources

adrbrowsiel_utility_deps = []
adrbrowsiel_utility_deps += adrbrowsiel_utility_importer_deps

adrbrowsiel_utility_public_deps = []
adrbrowsiel_utility_public_deps += adrbrowsiel_utility_importer_public_deps
