import("//adrbrowsiel/components/ipfs/buildflags/buildflags.gni")
import("//adrbrowsiel/components/sidebar/buildflags/buildflags.gni")
import("//chrome/common/features.gni")
import("//tools/grit/grit_rule.gni")

grit("adrbrowsiel_theme_resources") {
  source = "adrbrowsiel_theme_resources.grd"
  defines = chrome_grit_defines
  defines += [
    "enable_sidebar=$enable_sidebar",
    "ipfs_enabled=$ipfs_enabled",
  ]
  outputs = [
    "grit/adrbrowsiel_theme_resources.h",
    "grit/adrbrowsiel_theme_resources_map.cc",
    "grit/adrbrowsiel_theme_resources_map.h",
    "adrbrowsiel_theme_resources_100_percent.pak",
    "adrbrowsiel_theme_resources_200_percent.pak",
    "adrbrowsiel_theme_resources_300_percent.pak",
  ]

  resource_ids = "//adrbrowsiel/browser/resources/resource_ids"

  output_dir = "$root_gen_dir/adrbrowsiel"
}

grit("adrbrowsiel_unscaled_resources") {
  source = "adrbrowsiel_unscaled_resources.grd"
  defines = chrome_grit_defines
  outputs = [
    "grit/adrbrowsiel_unscaled_resources.h",
    "adrbrowsiel_unscaled_resources.pak",
  ]

  resource_ids = "//adrbrowsiel/browser/resources/resource_ids"

  output_dir = "$root_gen_dir/adrbrowsiel"
}
